// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test.spec int 1`] = `
{
  "1": true,
  "2": true,
  "3": true,
  "4": true,
  "5": true,
}
`;

exports[`test.spec randIndexByLength 1`] = `
{
  "0": true,
  "1": true,
  "2": true,
  "3": true,
  "4": true,
}
`;

exports[`test.spec randIndexWithRange 1`] = `
{
  "1": true,
  "2": true,
  "3": true,
  "4": true,
}
`;
